// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with default properties 1`] = `
<View
  size="small"
  style={
    Array [
      Object {
        "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
        "borderRadius": 4,
        "lineHeight": 20,
        "paddingBottom": 0,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 0,
      },
    ]
  }
>
  <Text
    alignSelf="baseline"
    color="surface.text.subtle.lowContrast"
    fontFamily="code"
    fontSize={75}
    lineHeight={100}
    style={
      Array [
        Object {
          "alignSelf": "baseline",
          "color": "hsla(216, 27%, 36%, 1)",
          "fontFamily": "Courier",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    TEST_TOKEN
  </Text>
</View>
`;

exports[`<Code /> should render medium Code 1`] = `
<View
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
        "borderRadius": 4,
        "lineHeight": 20,
        "paddingBottom": 0,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 0,
      },
    ]
  }
>
  <Text
    alignSelf="baseline"
    color="surface.text.subtle.lowContrast"
    fontFamily="code"
    fontSize={100}
    lineHeight={100}
    style={
      Array [
        Object {
          "alignSelf": "baseline",
          "color": "hsla(216, 27%, 36%, 1)",
          "fontFamily": "Courier",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    MEDIUM
  </Text>
</View>
`;

exports[`<Code /> should render small Code 1`] = `
<View
  size="small"
  style={
    Array [
      Object {
        "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
        "borderRadius": 4,
        "lineHeight": 20,
        "paddingBottom": 0,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 0,
      },
    ]
  }
>
  <Text
    alignSelf="baseline"
    color="surface.text.subtle.lowContrast"
    fontFamily="code"
    fontSize={75}
    lineHeight={100}
    style={
      Array [
        Object {
          "alignSelf": "baseline",
          "color": "hsla(216, 27%, 36%, 1)",
          "fontFamily": "Courier",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    SMALL
  </Text>
</View>
`;
